--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ Clustering/LGA_2022_AUST_GDA2020_SHP/LGA_2022_AUST_GDA2020.shx
 Clustering/LGA_2022_AUST_GDA2020_SHP/LGA_2022_AUST_GDA2020.xml
 Clustering/LGA_2022_AUST_GDA2020_SHP/LGA_2022_AUST_GDA2020.prj
 Clustering/clean_data.csv
+Clustering_NewDataSet/1270055001_sa2_2016_aust_shape/SA2_2016_AUST.xml
+Clustering_NewDataSet/1270055001_sa2_2016_aust_shape/SA2_2016_AUST.dbf
+Clustering_NewDataSet/1270055001_sa2_2016_aust_shape/SA2_2016_AUST.prj
+Clustering_NewDataSet/1270055001_sa2_2016_aust_shape/SA2_2016_AUST.shx
+Clustering_NewDataSet/1270055001_sa2_2016_aust_shape/SA2_2016_AUST.shp
