--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ Clustering_NewDataSet/1270055001_sa2_2016_aust_shape/SA2_2016_AUST.dbf
 Clustering_NewDataSet/1270055001_sa2_2016_aust_shape/SA2_2016_AUST.prj
 Clustering_NewDataSet/1270055001_sa2_2016_aust_shape/SA2_2016_AUST.shx
 Clustering_NewDataSet/1270055001_sa2_2016_aust_shape/SA2_2016_AUST.shp
+data/
+output/
+
